整理 shell-script

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Local .terraform directories
 **/.terraform/*
-
+**/tfstate/*
 # .tfstate files
 *.tfstate
 *.tfstate.*
@@ -27,3 +27,4 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+a.txt
