--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@ override.tf.json
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
 a.txt
+.idea
+.envrc!/shell-scripts/tfplan.binary
+
+tfplan.*
+\
